small changes for testing

--- a/src/aura/SWStep3/SWStep3.cmp
+++ b/src/aura/SWStep3/SWStep3.cmp
@@ -37,6 +37,10 @@
             elementum quis dignissim commodo, dapibus id metus. Pellentesque elementum nisl a purus ullamcorper, vitae
             imperdiet ipsum finibus. Proin id nibh suscipit, pulvinar metus nec, convallis nunc. Suspendisse potenti.
             Morbi urna ipsum, tristique vel congue vitae, maximus eget dolor.
+
+            Fusce ultrices, arcu sit amet imperdiet blandit, tellus est bibendum purus, ut aliquet lorem ex sed lorem.
+            Nunc eget dolor aliquet, sollicitudin felis tincidunt, fringilla mauris. Phasellus commodo viverra lorem at
+            interdum. Sed condimentum ligula id finibus dapibus.
         </div>
     </div>
 </aura:component>
